# aether-wire

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.cargo/: config.toml
docs/: cli-reference.md  roadmap.md  technical-details.md
docs/technical-details/: qualify-mode.md  tcp-benchmark-mode.md  technical-details.md  udp-benchmark-mode.md
src/: cli.rs  client.rs  ipv4_tcp_client.rs  ipv4_tcp_server.rs  ipv4_udp_client.rs  ipv4_udp_server.rs  main.rs  mod.rs  payload.rs  proto.rs  server.rs  tcp_utils.rs  utils.rs  wire.rs
src/check/: config.rs  interfaces.rs  kernel.rs  memory.rs  mod.rs  print.rs  privileges.rs  types.rs
src/cli/: mod.rs  parsing.rs  run.rs
src/cli/commands/: check.rs  mod.rs  server.rs  udp.rs
src/client/: mod.rs
src/client/benchmark/: client.rs  direction.rs  mod.rs  stream.rs  tcp_stream.rs  udp_stream.rs
src/client/qualify/: client.rs  mod.rs  tcp_probe.rs
src/control/: mod.rs  proto.rs  wire.rs
src/protocol/: aw.rs  constants.rs  ethernet.rs  ipv4.rs  ipv6.rs  messages.rs  mod.rs  stats.rs  udp.rs  wire.rs
src/protocol/checksum/: ipv4.rs  mod.rs  udp.rs  utils.rs
src/server/: config.rs  mod.rs  tcp_handler.rs  udp_handler.rs  validator.rs
src/server/tcp/: handler.rs  mod.rs  streams.rs  verify.rs
src/server/udp/: handler.rs  mod.rs  statistics.rs  streams.rs  timestamp_recv.rs
src/socket/: mod.rs  so_rcvbuf.rs  so_timestamp.rs  so_timestampns.rs
src/tcp/: client.rs  maxseg.rs  mod.rs  server.rs
src/transport/tcp/: maxseg.rs  (+1 more)
src/tui/: app.rs  colors.rs  footer.rs  format.rs  input.rs  input_list.rs  mod.rs  runner.rs  task.rs  ui.rs
src/udp/: client.rs  config.rs  mod.rs  validator.rs
src/utils/: colors.rs  constants.rs  format.rs  globals.rs  hardware.rs  logging.rs  mod.rs  output.rs  parser.rs  random.rs  report.rs
(+56 files in other folders)
