[package]
name = "aether-wire"
version = "0.1.0"
edition = "2024"
description = "native cross-platform E2E network performance and benchmarking tool"

[[bin]]
name = "aw"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
bincode = "1.3.3"
chrono = "0.4.44"
clap = { version = "4.6.1", features = ["derive"] }
core_affinity = "0.8.3"
crossterm = "0.29.0"
humantime = "2.3.0"
libc = "0.2.186"
rand_chacha = "0.3"
rand_core = { version = "0.6", features = ["getrandom"] }
ratatui = "0.30.0"
rayon = "1.12.0"
serde = { version = "1.0.228", features = ["derive"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = ["Win32_Networking_WinSock"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
