[package]
name = "aether-wire"
version = "0.1.0"
edition = "2024"
description = "native linux E2E network performance and benchmarking tool"

[[bin]]
name = "aw"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[profile.profiling]
inherits = "release"
debug = true
strip = "none"
